<?xml version="1.0"?>
<package format="2">
  <name>lpuwb</name>
  <version>0.0.0</version>
  <description>The lpuwb package</description>

  <maintainer email="youremail@example.com">Your Name</maintainer>
  <license>TODO</license>

  <!-- Dependências de build -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Dependências de execução -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
