<?xml version="1.0"?>
<package format="2">
  <name>lsuwb</name>
  <version>0.0.1</version>
  <description>LSUWB - Localização com UWB</description>

  <maintainer email="ruyther.maximo@edu.ufes.br">Ruyther Maximo - LAB-Air</maintainer>
  <license>MIT</license>

  <!-- Dependências de build -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Dependências de execução -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Exportar informações -->
  <export></export>
</package>